--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -145,12 +145,59 @@ body {
     background-color: #3636367a;
     position: relative;
 
-    .back-home-button {
+    nav {
       position: absolute;
-      width: 50px;
-      height: 50px;
       top: 0;
       right: 0;
+      width: 70px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      row-gap: 20px;
+      height: 200px;
+      flex-direction: column;
+      background-image: url("./images/titlestrip.png");
+      background-size: auto;
+      background-repeat: no-repeat;
+      background-position: bottom;
+      z-index: 99999;
+      opacity: 1;
+      transition: .5s;
+
+      &.displayNone {
+        display: flex;
+        opacity: 0;
+        right: calc(100vw - 70px);
+      }
+
+      img {
+        width: 100%;
+      }
+
+    }
+
+    .back-home-button,
+    .back-cat {
+
+      width: 40px;
+      height: 40px;
+      opacity: 0.7;
+
+      &.displayNone {
+        display: none;
+      }
+    }
+
+    .back-cat {
+
+      width: 40px;
+      height: 40px;
+      transition: .5s;
+
+      &:disabled {
+        opacity: 0.2;
+      }
+
 
       &.displayNone {
         display: none;
