--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -174,35 +174,38 @@ body {
         width: 100%;
       }
 
-    }
+      .back-home-button,
+      .back-cat {
 
-    .back-home-button,
-    .back-cat {
+        width: 40px;
+        height: 40px;
+        opacity: 0.7;
 
-      width: 40px;
-      height: 40px;
-      opacity: 0.7;
-
-      &.displayNone {
-        display: none;
-      }
-    }
-
-    .back-cat {
-
-      width: 40px;
-      height: 40px;
-      transition: .5s;
-
-      &:disabled {
-        opacity: 0.2;
+        &.displayNone {
+          display: none;
+        }
       }
 
+      .back-cat {
 
-      &.displayNone {
-        display: none;
+        width: 40px;
+        height: 40px;
+        transition: .5s;
+
+        &:disabled {
+          opacity: 0.2;
+        }
+
+
+        &.displayNone {
+          display: none;
+        }
       }
+
+
     }
+
+
   }
 
   h1 {
@@ -240,9 +243,15 @@ body {
 
       li {
         background-color: rgb(87, 87, 79);
-        padding: 20px;
         cursor: pointer;
         color: white;
+
+        h2 {
+          display: block;
+          width: 100%;
+          height: 100%;
+          padding: 20px;
+        }
       }
     }
 
