--- a/art-quiz/src/styles.scss
+++ b/art-quiz/src/styles.scss
@@ -271,6 +271,15 @@ body {
     }
   }
 
+
+
+
+  .nextQButton {
+    width: 55px;
+    height: 55px;
+    color: black;
+  }
+
   .settings-position {
     position: absolute;
     bottom: 30px;
